--- a/Lab1-2/MainWindow.xaml
+++ b/Lab1-2/MainWindow.xaml
@@ -9,7 +9,7 @@
         Background="Gray">
     <Grid>
         <Canvas Name ="MainCanvas" Margin="0,0,0,104" Background="White" MouseLeftButtonDown="Canvas_LeftButtonDown"/>
-        <Button HorizontalAlignment="Center" Margin="0,346,0,0" VerticalAlignment="Top" Height="46" Width="108" FontSize="14">
+        <Button HorizontalAlignment="Center" Margin="0,346,0,0" VerticalAlignment="Top" Height="46" Width="108" FontSize="14" Click="Button_Click">
             <TextBlock TextWrapping="Wrap" TextAlignment="Center" FontSize="16" LineHeight="7" Width="72"><Run Text="Clear "/><LineBreak/><Run Text="Canvas"/><LineBreak/><Run/></TextBlock>
         </Button>
         <Grid HorizontalAlignment="Left" Margin="252,346,0,0" VerticalAlignment="Top" Width="100
@@ -19,8 +19,8 @@
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
 
-            <RadioButton x:Name="Eclipse" Checked="Draw" Content="Eclipse" Grid.Row="0" FontSize="16"  />
-            <RadioButton x:Name="Circle" Checked="Draw" Content="Circle" Grid.Row="1" FontSize="16" />
+            <RadioButton x:Name="Eclipse" GroupName="Figure" Content="Eclipse" IsChecked="True" Grid.Row="0" FontSize="16"  />
+            <RadioButton x:Name="Circle" GroupName="Figure" Content="Circle" Grid.Row="1" FontSize="16" />
 
         </Grid>
         <Grid Margin="522,349,238,0" VerticalAlignment="Top" Width="100" Height="40">
@@ -28,8 +28,8 @@
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
-            <RadioButton x:Name="Parabola" Checked="Draw" Content="Parabola" Grid.Row="0" Grid.Column="1" Width="260" FontSize="16" HorizontalAlignment="Center"/>
-            <RadioButton x:Name="Hyperbola" Checked="Draw" Content="Hyperbola" Grid.Column="1" Width="260" FontSize="16" HorizontalAlignment="Center" Margin="0,20,0,0" Grid.RowSpan="2"/>
+            <RadioButton x:Name="Parabola" GroupName="Figure" Content="Parabola" Grid.Row="0" Grid.Column="1" Width="260" FontSize="16" HorizontalAlignment="Center"/>
+            <RadioButton x:Name="Hyperbola" GroupName="Figure" Content="Hyperbola" Grid.Column="1" Width="260" FontSize="16" HorizontalAlignment="Center" Margin="0,20,0,0" Grid.RowSpan="2"/>
         </Grid>
     </Grid>
 </Window>
