--- a/Lab1-2/MainWindow.xaml
+++ b/Lab1-2/MainWindow.xaml
@@ -5,15 +5,16 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Lab1_2"
         mc:Ignorable="d"
-        Title="MainWindow" Height="455" Width="860"
+        Title="MainWindow" Height="627" Width="983"
+        MinWidth="850"
+        MinHeight="600"
         Background="LightGray">
     <Grid>
-        <Canvas Name ="MainCanvas" Margin="0,0,0,104" Background="White" MouseLeftButtonDown="Canvas_LeftButtonDown"/>
-        <Button HorizontalAlignment="Center" Margin="0,371,0,0" VerticalAlignment="Top" Height="46" Width="108" FontSize="14" Click="Button_Click">
+        <Canvas Name ="MainCanvas" Height="500" Width ="{Binding ActualWidth, RelativeSource={RelativeSource AncestorType=Grid}}" Background="White" MouseLeftButtonDown="Canvas_LeftButtonDown" Margin="0,0,0,211"/>
+        <Button HorizontalAlignment="Center" Margin="0,512,0,0" VerticalAlignment="Top" Height="46" Width="108" FontSize="14" Click="Button_Click">
             <TextBlock TextWrapping="Wrap" TextAlignment="Center" FontSize="16" LineHeight="7" Width="72"><Run Text="Clear "/><LineBreak/><Run Text="Canvas"/><LineBreak/><Run/></TextBlock>
         </Button>
-        <Grid HorizontalAlignment="Left" Margin="252,376,0,0" VerticalAlignment="Top" Width="100
-              " Height="45">
+        <Grid HorizontalAlignment="Center" Margin="0,510,230,0" VerticalAlignment="Top" Width="100" Height="45">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
@@ -23,13 +24,13 @@
             <RadioButton x:Name="Circle" GroupName="Figure" Content="Circle" Grid.Row="1" FontSize="16" />
 
         </Grid>
-        <Grid Margin="532,376,207,0" VerticalAlignment="Top" Height="40">
+        <Grid HorizontalAlignment ="Center" Margin="585,510,154,0" VerticalAlignment="Top" Height="40">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
-            <RadioButton x:Name="Parabola" GroupName="Figure" Content="Parabola" Grid.Row="0" Width="260" FontSize="16"/>
-            <RadioButton x:Name="Hyperbola" GroupName="Figure" Content="Hyperbola" Grid.Row="1" Width="260" FontSize="16"/>
+            <RadioButton x:Name="ParabolaButton" GroupName="Figure" Content="Parabola" Grid.Row="0" Width="260" FontSize="16"/>
+            <RadioButton x:Name="HyperbolaButton" GroupName="Figure" Content="Hyperbola" Grid.Row="1" Width="260" FontSize="16"/>
         </Grid>
     </Grid>
 </Window>
