--- a/Lab5/App.xaml
+++ b/Lab5/App.xaml
@@ -4,6 +4,12 @@
              xmlns:local="clr-namespace:Lab5"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <Style TargetType="Button">
+            <Style.Resources>
+                <Style TargetType="Border">
+                    <Setter Property="CornerRadius" Value="12" />
+                </Style>
+            </Style.Resources>
+        </Style>
     </Application.Resources>
 </Application>
