--- a/Lab5/MainWindow.xaml
+++ b/Lab5/MainWindow.xaml
@@ -38,8 +38,8 @@
             <Button Grid.Row ="1" Grid.Column ="3" Name="JarvisConvexHullButton" Click="JarvisConvexHullButton_Click" >
                 <TextBlock TextWrapping="Wrap" Text="Jarvis Convex Hull"/>
             </Button>
-            <TextBox Grid.Row ="0" Grid.Column="1" Name="PointValueText" HorizontalAlignment="Center" Height="25" Background="White" TextWrapping="Wrap" VerticalAlignment="Top" Width="174" Margin="0,20,0,0" />
-            <TextBox Grid.Row ="1" Grid.Column="1" Name ="IntersectionValueText" HorizontalAlignment="Center" Height="25" Background="White" TextWrapping="Wrap" VerticalAlignment="Top" Width="174" Margin="0,20,0,0" />
+            <TextBox Grid.Column="1" Name="PointValueText" HorizontalAlignment="Center" Height="25" Background="White" TextWrapping="Wrap" VerticalAlignment="Center" Width="174" />
+            <TextBox Grid.Row ="1" Grid.Column="1" Name ="IntersectionValueText" HorizontalAlignment="Center" Height="25" Background="White" TextWrapping="Wrap" VerticalAlignment="Center" Width="174" />
             <Button Grid.Row="0" Grid.Column ="4" Content="Clear" HorizontalAlignment="Center" Height="90" VerticalAlignment="Top" Width="149" Click="ClearButton_Click" Grid.RowSpan="2"/>
         </Grid>
 
