Intersections and Jarvis Hull

--- a/Lab5/App.xaml
+++ b/Lab5/App.xaml
@@ -10,6 +10,7 @@
                     <Setter Property="CornerRadius" Value="12" />
                 </Style>
             </Style.Resources>
+            <Setter Property="FontSize" Value="16"/>
         </Style>
     </Application.Resources>
 </Application>
