--- a/Lab5/MainWindow.xaml
+++ b/Lab5/MainWindow.xaml
@@ -33,13 +33,13 @@
                 <TextBlock TextWrapping="Wrap" Text="Calculate Normals"/>
             </Button>
             <Button Grid.Row ="0" Grid.Column="3" Name="GrahamsConvexHullButton" Click="GrahamsConvexHullButton_Click" >
-                <TextBlock TextWrapping="Wrap" Text="Graham's Convex Hull"/>
+                <TextBlock TextWrapping="Wrap" Text="Graham's Convex Hull" TextAlignment="Center"/>
             </Button>
             <Button Grid.Row ="1" Grid.Column ="3" Name="JarvisConvexHullButton" Click="JarvisConvexHullButton_Click" >
                 <TextBlock TextWrapping="Wrap" Text="Jarvis Convex Hull"/>
             </Button>
-            <TextBox Grid.Column="1" Name="PointValueText" HorizontalAlignment="Center" Height="25" Background="White" TextWrapping="Wrap" VerticalAlignment="Center" Width="174" />
-            <TextBox Grid.Row ="1" Grid.Column="1" Name ="IntersectionValueText" HorizontalAlignment="Center" Height="25" Background="White" TextWrapping="Wrap" VerticalAlignment="Center" Width="174" />
+            <TextBox Grid.Row ="0" Grid.Column="1" FontSize="16" Name="PointValueText" HorizontalAlignment="Center" Height="25" Background="White" TextWrapping="Wrap" VerticalAlignment="Center" Width="174" Text="" />
+            <TextBox Grid.Row ="1" Grid.Column="1" FontSize="16" Name ="IntersectionValueText" HorizontalAlignment="Center" Height="25" Background="White" TextWrapping="Wrap" VerticalAlignment="Center" Width="174" />
             <Button Grid.Row="0" Grid.Column ="4" Content="Clear" HorizontalAlignment="Center" Height="90" VerticalAlignment="Top" Width="149" Click="ClearButton_Click" Grid.RowSpan="2"/>
         </Grid>
 
