--- a/Lab5/MainWindow.xaml
+++ b/Lab5/MainWindow.xaml
@@ -5,9 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Lab5"
         mc:Ignorable="d"
-        Title="MainWindow" Height="540" Width="850">
-    <Grid Background ="Gray" Margin="0,0,-26,-31">
-        <Canvas Name ="MainCanvas" MouseLeftButtonDown ="MainCanvas_OnMouseLeftButtonDown" Height="350" Background="White" Margin="0,0,0,165"/>
+        Title="MainWindow" Height="570" Width="850">
+    <Grid Background ="Gray" Margin="0,0,-26,-54">
+        <Canvas Name ="MainCanvas" MouseLeftButtonDown ="MainCanvas_OnMouseLeftButtonDown" Background="White" Margin="0,0,0,196"/>
         <Grid HorizontalAlignment ="Left" Margin="14,380,0,55" Height="90" Width="770">
             <Grid.RowDefinitions>
                 <RowDefinition Height="45"/>
@@ -42,6 +42,11 @@
             <TextBox Grid.Row ="1" Grid.Column="1" FontSize="16" Name ="IntersectionValueText" HorizontalAlignment="Center" Height="25" Background="White" TextWrapping="Wrap" VerticalAlignment="Center" Width="174" />
             <Button Grid.Row="0" Grid.Column ="4" Content="Clear" HorizontalAlignment="Center" Height="90" VerticalAlignment="Top" Width="149" Click="ClearButton_Click" Grid.RowSpan="2"/>
         </Grid>
+        <StackPanel Margin="14,512,92,48" Orientation="Horizontal">
+            <RadioButton GroupName="Fill" x:Name="FloodFillCheckBox" Content="Flood fill" FontSize="16" Margin="0,0,15,0"/>
+            <RadioButton GroupName="Fill" x:Name="ScalineCheckBox" Content="Scaline check box" FontSize="16" Margin="0,0,15,0"/>
+            <RadioButton Content="No fill" FontSize="16"/>
+        </StackPanel>
 
     </Grid>
 </Window>
